@@ -10,6 +10,6 @@ Patches and Suggestions
 ```````````````````````
 - Brian Johnson
 - Dan Christensen
+- Jeremy Maitin-Shepard
 - Johann Klähn
 - Petros Moisiadis
-
